example_manifests/deploy_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-machine-with-vol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-machine
  template:
    metadata:
      labels:
        app: ubuntu-machine
    spec:
      volumes:
        - name: cool-vol
          persistentVolumeClaim:
            claimName: my-cool-data
      containers:
      - name: ubuntu
        image: ubuntu:latest
        command: ["/bin/sleep", "36500d"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/test-data"
          name: cool-vol
        resources:
          limits:
            cpu: "1"
            memory: 2G
          requests:
            cpu: "1"
            memory: 2G
      restartPolicy: Always
