example_manifests/gpu_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-test-job
  namespace: gpu-test
spec:
  selector:
    matchLabels:
      job: gpu-test-job
  template:
    metadata:
      labels:
        job: gpu-test-job
    spec:
      containers:
      - command: ["/bin/sh", "-c"]
        args:
          - apt-get update && apt-get install -y wget &&
            wget -q -O /tmp/script.py https://raw.githubusercontent.com/itaynvn-runai/scripts/refs/heads/main/gpu_utilizer_pytorch.py &&
            python /tmp/script.py
        image: pytorch/pytorch:2.5.0-cuda12.1-cudnn9-runtime
        imagePullPolicy: Always
        name: gpu-container
        resources:
          limits:
            nvidia.com/gpu: 1
            cpu: 1
            memory: 2G
          requests:
            nvidia.com/gpu: 1
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
      tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        value: present
