example_manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: minio
spec:
  gateways:
    - istio-gw # default when using istio ingress
  hosts:
    - minio.webapp.me # the host subdomain under the cluster domain
  http:
    - retries:
        attempts: 5
        perTryTimeout: 172800s
      route:
        - destination:
            host: minio.minio.svc.cluster.local # service address
      timeout: 864000s
